I forgot about Math
MegAmi has FORGOTTEN about Math...

--- a/docs/RSDKv3/Functions/Math/Sin256.md
+++ b/docs/RSDKv3/Functions/Math/Sin256.md
@@ -1,7 +1,7 @@
 # Sin256
 
 ## Description
-Gets the value from lookup table `Sin256` based on `Angle` and sets it in `Store`.
+Gets the value from the `sin256` lookup table based on `Angle` and sets it in `Store`.
 
 ## Parameters
 - `Store`
@@ -10,7 +10,7 @@ The variable to store the result.
 The value of angle.
 
 ## Return Value
-None.
+Sets `Store` to the result.
 
 ## Syntax
 ```
