Rewrite callback description

--- a/docs/Games/SonicOrigins/Documentation/NotifyCallback/1007.md
+++ b/docs/Games/SonicOrigins/Documentation/NotifyCallback/1007.md
@@ -1,7 +1,7 @@
 # NOTIFY_1007
 
 ## Description
-Notifies [Hedgehog Engine 2](../../HedgehogEngine2.md) that the save file features additional content that doesn't exist on the user end. (Such as Origins Plus content for example)
+Displays an error message for trying to access a save file with DLC content without said DLC installed.
 
 ## Parameters
 None.
@@ -13,13 +13,13 @@ None.
 === "v3"
 
     ```
-    EngineCallback(NOTIFY_1007)
+    EngineCallback(1007)
     ```
 
 === "v4"
 
     ```
-    CallNativeFunction2(NotifyCallback, NOTIFY_1007, 0)
+    CallNativeFunction2(NotifyCallback, 1007, 0)
     ```
 
 === "v5"
