Add remaining v4 functions

--- a/docs/RSDKv4/Functions/Math/Cos256.md
+++ b/docs/RSDKv4/Functions/Math/Cos256.md
@@ -10,7 +10,7 @@ Gets the value from the `cos256` lookup table based on `angle` and sets it in `s
 
 `angle`
 
-:   The value of angle.
+:   The value of the angle.
 
 ## Return Value
 Sets `store` to the result.
